--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.12.2",
     "json-server": "^1.0.0-beta.0",
     "ngx-toastr": "^19.0.0",
+    "nodemon": "^3.1.3",
     "rxjs": "~7.8.0",
     "signals": "^1.0.0",
     "tslib": "^2.3.0",
